--- a/WebContent/view/css/share.css
+++ b/WebContent/view/css/share.css
@@ -25,36 +25,36 @@ div#headerBg{
 }
 
 div#header{
-	width: 960px;
-	margin: 0 auto;
+	width: 1100px;
+	margin: 0 175px;
 	text-align: left;
 }
 
-	div#header h1{
-		font-size: 20px;
-		float: left;
-		width: 300px;
-		color: #333;
-		letter-spacing: 0.05em;
-		padding: 20px 0 15px 0;
-	}
+div#header h1{
+	font-size: 20px;
+	float: left;
+	width: 300px;
+	color: #333;
+	letter-spacing: 0.05em;
+	padding: 20px 0 15px 0;
+}
 
 /*-------------------------------------*/
 /* グローバルナビゲーション */
 /*-------------------------------------*/
 
 ul#gNavi{
-	width: 600px;
+	width: 700px;
 	float: right;
-	margin-top: 15px;
+	margin-top: 0px;
 }
 
 ul#gNavi li{
 	display: block;
 	float: right;
 	padding: 8px 0;
-	margin-left: 16px;
-	font-size: 13px;
+	margin-left: 10px;
+	font-size: 12px;
 	letter-spacing: 0.08em;
 }
 
@@ -63,7 +63,7 @@ ul#gNavi li a{
 	text-decoration: none;
 	border-right: 1px solid #ccc;
 	display: block;
-	padding-right: 16px;
+	padding-right: 10px;
 }
 
 ul#gNavi li a:hover{
@@ -71,7 +71,7 @@ ul#gNavi li a:hover{
 }
 
 ul#gNavi li.firstItem a{
-	padding-left: 16px;
+	padding-left: 10px;
 	border-left: 1px solid #ccc;
 }
 
